[metadata]
name = hdrhistogram
summary = High Dynamic Range histogram in native python
description-file =
    README.rst
author = Alec Hothan
author-email = ahothan@gmail.com
home-page = https://github.com/HdrHistogram/HdrHistogram_py
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    hdrh

[entry_points]
console_scripts =
    dump_hdrh = hdrh.dump:dump

[wheel]
universal = 1
